[FreeBSD] Add support for the FreeBSD platform
This role was developed while testing on a CentOS 7 server.
This commit adds support for the FreeBSD platform. The commit
externalize the list of package dependencies of a $PLATFORM.yml file.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,6 @@
 ---
-# NOTE(spredzy): To remove once lecm is packaged
 - name: Install required dependencies
-  yum: name={{ item }}
-  with_items:
-    - gcc
-    - python-devel
-    - libffi-devel
-    - openssl-devel
-    - python-pip
+  include: '{{ ansible_os_family }}.yml'
 
 - name: Install lecm from Pip
   pip: name=lecm
