--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,8 +2,9 @@
 - name: Install required dependencies
   include: '{{ ansible_os_family }}.yml'
 
-- name: Install lecm from Pip
-  pip: name=lecm
+- name: Install lecm
+  package: name=lecm
+  when: ansible_os_family != 'FreeBSD'
 
 
 - name: Configure globals for lecm
