--- a/tasks/RedHat.yml
+++ b/tasks/RedHat.yml
@@ -24,11 +24,17 @@
   - name: Install EPEL
     package:
       name: epel-release
+    when: ansible_distribution_major_version == 7
 
   - name: Install python-pip
     package:
-      name: python-pip
+      name: {% if ansible_distribution_major_version == 7 %}python{% else %}python3{% endif %}-pip
 
+  - name: Install acme-tiny
+    package:
+      name: acme-tiny
+    when: ansible_distribution_major_version == 8
+      
   - name: Install lecm
     pip:
       name: lecm
