--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -18,7 +18,7 @@
   package:
     name: lecm
   become: True
-  when: ansible_distribution == 'Debian' and ansible_distribution_major_version|version_compare('9', '>=')
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version is version('9', '>=')
 
 - block:
   - name: Install pip
@@ -30,4 +30,4 @@
       name: lecm
 
   become: True
-  when: (ansible_distribution == 'Debian' and not ansible_distribution_major_version|version_compare('9', '>=')) or ansible_distribution != 'Debian'
+  when: (ansible_distribution == 'Debian' and not ansible_distribution_major_version is version('9', '>=')) or ansible_distribution != 'Debian'
